# coresploit

./: .gitignore  CMakeLists.txt  LICENSE  README.md  changelog.md
coresploit-linux64/: CMakeCache.txt  CS  CS.cbp  Makefile  cmake_install.cmake
coresploit-linux64/.cmake/api/v1/reply/: cache-v2-c3de9d28bec6b7c0b76f.json  cmakeFiles-v1-54c6d6ac08c4cb34c26f.json  codemodel-v2-3c72268e8890674a96bb.json  directory-vendor.glfw-Release-6ca14a63b8885af94f57.json  index-2024-02-18T15-59-44-0729.json  target-CS-Release-fd60313d028fb834708e.json  target-glfw-Release-95e78687c7320fdd9661.json  target-imgui-Release-02d37175ace6f17a4214.json  target-toml11-Release-b98fc2f362bbcfa6b26d.json  target-uninstall-Release-2ba8a0c459ada0de8ef9.json  target-update_mappings-Release-45a77b2de219e40d0e5f.json
docs/: dependencies-manifest  dependencies-manifest.md  manifest
src/: main.cpp
src/boot/: boot.cpp  boot.hpp  config.cpp  config.hpp  msg.hpp  trivial-boot.cpp  trivial-boot.hpp
src/svc/: example-svc.cpp  example-svc.hpp  prg-ustat.cpp  prg-ustat.hpp  svc-example.cpp  svc-example.hpp  svc-ustat.cpp  svc-ustat.hpp  svc.cpp  svc.hpp
src/svc/system/security/: svc-security.cpp  svc-security.hpp
